fix: crash with java 17 on 1.20.1-1.20.4